feat: 四阶段全面修复 - 安全、代码质量、工程化、持续优化
阶段一：安全与稳定性修复
- 移除硬编码 API 密钥（PaddleOCR、百度 OCR）
- 修复 searchTimer 和 createObjectURL 内存泄漏
- 修复 7 处空 catch 块
- 优化 ImageService.imageRow() 查询

阶段二：代码质量
- 提取 useImageEditor composable（183 行）
- 创建 TypeScript 类型定义（types.ts）
- 实现 AbortController 请求取消
- 优化 RecordService N+1 查询

阶段三：工程化
- 集成 Flyway 数据库迁移
- 添加 Docker 配置（docker-compose、Dockerfile）
- 集成 Swagger/OpenAPI
- 添加基础测试框架

阶段四：持续优化
- 运价表单验证
- 更新开发文档